<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   app:cardUseCompatPadding="true"
                                   android:layout_width="match_parent" android:layout_height="wrap_content">

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


            <TextView
                    android:id="@+id/text_view_symbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="BTC / ETH"
                    android:text="@string/text_view_label_symbols"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"/>

            <TextView
                    android:id="@+id/text_view_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="100000 р"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:textSize="24sp"
                    android:textAppearance="?attr/textAppearanceListItem"/>

            <TextView
                    android:id="@+id/text_view_last_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Последнее обновление: 12 сентября"
                    android:text="@string/last_update_label"
                    android:layout_margin="@dimen/text_margin"
                    android:textSize="14sp"
                    android:textAppearance="?attr/textAppearanceListItem"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/image_view_logo_coin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/logo_coins_description"
        />

    </FrameLayout>

</androidx.cardview.widget.CardView>